--- a/client/index.css
+++ b/client/index.css
@@ -10,11 +10,17 @@ h1 {
   -webkit-background-clip: text;
   color: transparent;
   display: inline-block;
-  margin: 10px 0px 15px;
+  margin: 10px 0px 20px;
 }
 
 ul {
   list-style: none;
   padding-left: 0px;
   margin-top: 5px;
+}
+
+#gameBoard img {
+  position: relative;
+  top: 12px;
+  left: 10px;
 }
