--- a/client/index.css
+++ b/client/index.css
@@ -37,3 +37,14 @@ input {
   width: 100%;
 }
 
+#error {
+  max-width: 580px;
+  position: absolute;
+  top: 70px;
+  background: rgb(252, 203, 203);
+  padding: 10px;
+  margin-right: 30px;
+  border-radius: 4px;
+  border: thin gray solid;
+  display: none;
+}
