--- a/client/mobile.css
+++ b/client/mobile.css
@@ -3,6 +3,10 @@
     margin-left: 10px;
     margin-right: 10px;
   }
+
+  #error {
+    margin-right: 10px;
+  }
 }
 
 @media screen and (max-width: 440px) {
