--- a/client/index.css
+++ b/client/index.css
@@ -41,6 +41,8 @@ input {
   padding: 3px 5px;
   border-radius: 3px;
   font-size: 16px;
+  max-width: 100%;
+  box-sizing: border-box;
 }
 
 #flexContainer {
@@ -63,4 +65,8 @@ input {
   border-radius: 4px;
   border: thin gray solid;
   display: none;
+}
+
+button {
+  cursor: pointer
 }
