--- a/client/components/player_search/player_search.css
+++ b/client/components/player_search/player_search.css
@@ -3,11 +3,11 @@
 }
 
 .playerSearch input {
-  margin-left: 10px;
-  margin-right: 20px;
   padding-right: 24px;
-  width: calc(100% - 20px);
-  box-sizing: border-box;
+}
+
+.playerSearch.no_search_icon input {
+  padding-right: 0;
 }
 
 .playerSearch {
@@ -21,26 +21,28 @@
   top: 5px;
 }
 
+.playerSearch.no_search_icon:after {
+  content: none;
+}
+
 #chat {
   position: relative;
 }
 
 .playerSearch ul {
   margin-top: 3px;
-  margin-left: 10px;
-  margin-right: 10px;
   box-sizing: border-box;
   border: thin rgb(119, 119, 255) solid;
   background: rgb(250, 250, 255);
   display: none;
   position: absolute;
-  width: calc(100% - 20px);
   border-radius: 3px;
   cursor: pointer;
   z-index: 1;
   -webkit-box-shadow: -7px 7px 4px -4px rgba(0,0,0,0.45);
   -moz-box-shadow: -7px 7px 4px -4px rgba(0,0,0,0.45);
   box-shadow: -7px 7px 4px -4px rgba(0,0,0,0.45);
+  width: 100%;
 }
 
 .playerSearch li {
