--- a/client/components/game_board/game_list.css
+++ b/client/components/game_board/game_list.css
@@ -2,12 +2,11 @@
   margin-top: 40px;
   width: 100%;
   max-width: 600px;
-  height: 500px;
-  max-height: 100%;
+  height: 100%;
   border: 1px indigo solid;
   border-radius: 5px;
   overflow-y: auto;
-  font-family: sans-serif;
+  flex: auto;
 }
 
 #gameList h2 {
