--- a/client/index.css
+++ b/client/index.css
@@ -1,6 +1,7 @@
 body {
   margin-left: 30px;
   margin-right: 30px;
+  font-family: sans-serif;
 }
 
 h1 {
@@ -47,12 +48,14 @@ input {
 
 #flexContainer {
   display: flex;
+  height: 600px;
 }
 
 #gameBoard {
   max-width: 600px;
   width: 100%;
-  display: inline-block;
+  display: flex;
+  flex-flow: column;
 }
 
 #error {
