--- a/client/components/chat/chat.css
+++ b/client/components/chat/chat.css
@@ -45,6 +45,16 @@
 }
 
 #chat li span:first-of-type {
+  background-size: 210px;
+  width: 15px;
+  height: 15px;
+  display: inline-block;
+  position: relative;
+  top: 2px;
+  margin-right: 8px;
+}
+
+#chat li span:nth-of-type(1) {
   color: green
 }
 
@@ -59,6 +69,21 @@
 
 #chat li.unknownPlayer span {
   color: gray
+}
+
+#chatHeader {
+  width: 100%
+}
+
+#chatHeader span {
+  background-image: url("../../assets/identicons.jpg");
+  width: 30px;
+  height: 30px;
+  float: right;
+  position: relative;
+  bottom: 16px;
+  right: 8px;
+  border: thin gray solid;
 }
 
 #messageBox {
