fix(client): use image instead of unicode glyph for search icon

--- a/client/components/player_search/player_search.css
+++ b/client/components/player_search/player_search.css
@@ -15,8 +15,11 @@
 }
 
 .playerSearch:after {
-  content: '\1F50D';
+  content: '';
+  background-image: url('../../assets/search.png');
   position: absolute;
+  width: 18px;
+  height: 18px;
   right: 16px;
   top: 5px;
 }
