fix(client): use png for delete because Chrome....

--- a/client/components/game_board/game_list.css
+++ b/client/components/game_board/game_list.css
@@ -65,14 +65,12 @@
 
 #gameList .deleteCheckBox[type="checkbox"]:after {
   position: absolute;
-  content: '\274c';
-  color: black;
-  left: 50%;
-  top: 50%;
-  -webkit-transform: translate(-50%,-50%);
-  -moz-transform: translate(-50%,-50%);
-  -ms-transform: translate(-50%,-50%);
-  transform: translate(-50%,-50%);
+  content: '';
+  left: 0px;
+  top: 0px;
+  width: 20px;
+  height: 20px;
+  background-image: url('../../assets/delete.png');
 }
 
 #gameList .deleteCheckBox[type="checkbox"]:checked {
