--- a/client/components/game_board/game_list.css
+++ b/client/components/game_board/game_list.css
@@ -88,3 +88,45 @@
   vertical-align: super;
   margin-left: 10px;
 }
+
+#gameList .score {
+  width: 21px;
+  height: 20px;
+  margin: 0;
+  padding: 0px 4px 0px 0px;
+  border-top: 2px #959595 solid;
+  border-left: 2px #959595 solid;
+  border-bottom: 2px #e0e0e0 solid;
+  border-right: 2px #e0e0e0 solid;
+  border-radius: 3px;
+  position: relative;
+  top: 7px;
+}
+
+#gameList span input {
+  width: 40px;
+  border: none;
+  font-size: 18px;
+  color: red;
+  font-family: 'cursedTimer';
+  vertical-align: super;
+  position: absolute;
+  left: 1px;
+  top:  -1px;
+  background: none;
+  outline: none;
+}
+
+#gameList span:nth-of-type(4) {
+  margin-right: 10px;
+}
+
+#gameList span:nth-of-type(3) {
+  display: inline-block;
+  width: 5px;
+  color: red;
+  font-family: 'cursedTimer';
+  position: relative;
+  right: 7px;
+  top: 1px;
+}
