--- a/client/index.css
+++ b/client/index.css
@@ -1,3 +1,10 @@
+
+
+@font-face {
+  font-family: 'cursedTimer';
+  src: url('assets/CursedTimerUlil-Aznm.ttf')  format('truetype')
+}
+
 body {
   margin: 0px 30px 30px;
   font-family: sans-serif;
