--- a/client/index.css
+++ b/client/index.css
@@ -77,13 +77,24 @@ textarea {
 
 #chat {
   margin-left: 30px;
-  width: 350px; 
-  min-width: 300px; 
+  max-width: 350px; 
   max-height: 100%;
+  min-width: 260px;
   border: thin green solid;
   border-radius: 5px;
   flex: auto;
   display: flex;
+  flex-flow: column;
+}
+
+#leaderboard {
+  flex: auto;
+  display: flex;
+  border: thin rgb(76, 76, 255) solid;
+  border-radius: 5px;
+  margin-left: 30px;
+  max-width: 220px;
+  min-width: 180px;
   flex-flow: column;
 }
 
@@ -97,6 +108,7 @@ textarea {
   border-radius: 4px;
   border: thin gray solid;
   display: none;
+  z-index: 4;
 }
 
 button {
